refactor: unified product database & json model
