# services/product/docs/swagger.yaml
@@ -1,4 +1,26 @@
 definitions:
+  model.Product:
+    properties:
+      available:
+        type: boolean
+      createdAt:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      price:
+        type: number
+      updatedAt:
+        type: string
+    required:
+    - available
+    - createdAt
+    - id
+    - name
+    - price
+    - updatedAt
+    type: object
   model.ProductDto:
     properties:
       available:
@@ -9,22 +31,6 @@ definitions:
         type: number
     required:
     - available
-    - name
-    - price
-    type: object
-  model.ProductResponse:
-    properties:
-      available:
-        type: boolean
-      id:
-        type: integer
-      name:
-        type: string
-      price:
-        type: number
-    required:
-    - available
-    - id
     - name
     - price
     type: object
@@ -47,7 +53,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/model.ProductResponse'
+              $ref: '#/definitions/model.Product'
             type: array
         "400":
           description: error
@@ -81,7 +87,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.ProductResponse'
+            $ref: '#/definitions/model.Product'
         "400":
           description: error
           schema:
@@ -114,7 +120,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.ProductResponse'
+            $ref: '#/definitions/model.Product'
         "400":
           description: error
           schema:
